[gd_scene load_steps=14 format=3 uid="uid://dlh2bj6t3t3e4"]

[ext_resource type="PackedScene" uid="uid://d1q5fpeyt1fa3" path="res://scenes/trap/trap_template.tscn" id="1_dwb8o"]
[ext_resource type="Script" path="res://scripts/trap/fire.gd" id="2_6gf3b"]
[ext_resource type="Texture2D" uid="uid://c155fxpjoe5gf" path="res://assets/Pixel Adventure 1/Traps/Fire/Off.png" id="2_gytsf"]
[ext_resource type="Texture2D" uid="uid://bxlyso00evpcp" path="res://assets/Pixel Adventure 1/Traps/Fire/On (16x32).png" id="3_7tfor"]
[ext_resource type="Texture2D" uid="uid://cgst2sqi2vykp" path="res://assets/Pixel Adventure 1/Traps/Fire/Hit (16x32).png" id="4_7va7c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2we42"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmspl"]
size = Vector2(10, 2)

[sub_resource type="Animation" id="Animation_ymkka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gytsf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FireArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hx3tu"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7va7c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FireArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q3s51"]
resource_name = "off"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gytsf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FireArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hy0gc"]
resource_name = "on"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7tfor")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FireArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydrtw"]
_data = {
"RESET": SubResource("Animation_ymkka"),
"hit": SubResource("Animation_hx3tu"),
"off": SubResource("Animation_q3s51"),
"on": SubResource("Animation_hy0gc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5dhf"]
size = Vector2(10, 12)

[node name="Fire" instance=ExtResource("1_dwb8o")]
script = ExtResource("2_6gf3b")

[node name="Collision" parent="." index="0"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_2we42")

[node name="DetectionArea" parent="." index="1"]
position = Vector2(0, 1)

[node name="Collision" parent="DetectionArea" index="0"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_wmspl")

[node name="Texture" parent="." index="2"]
texture = ExtResource("2_gytsf")

[node name="Animation" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_ydrtw")
}

[node name="TimerOn" type="Timer" parent="." index="4"]
wait_time = 0.1
one_shot = true

[node name="TimerOff" type="Timer" parent="." index="5"]
wait_time = 1.4
one_shot = true

[node name="FireArea" type="Area2D" parent="." index="6"]

[node name="Collision" type="CollisionShape2D" parent="FireArea" index="0"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_c5dhf")
disabled = true

[connection signal="body_entered" from="DetectionArea" to="." method="on_detection_area_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="timeout" from="TimerOn" to="." method="on_timer_on_timeout"]
[connection signal="timeout" from="TimerOff" to="." method="on_timer_off_timeout"]
[connection signal="body_entered" from="FireArea" to="." method="on_fire_area_body_entered"]
